@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-23T08:10:34Z",
-  "count_outdated" : 998,
-  "uniques_outdated" : 631,
+  "timestamp" : "2023-09-23T16:10:05Z",
+  "count_outdated" : 1001,
+  "uniques_outdated" : 633,
   "count" : 1020,
   "uniques" : 647,
   "clones" : [
-    {
-      "timestamp": "2023-09-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-09-11T00:00:00Z",
       "count": 1,
