@@ -1,12 +1,7 @@
 {
-  "count": 20,
+  "count": 19,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-09-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-11T00:00:00Z",
       "count": 1,
