@@ -1,3 +1,12 @@
+2023-09-23T16:10:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6284714929 # 1187
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
+* notice: last 14d: unq all: 3 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 631 998 / 647 1020
+* notice: next accum: outdated-unq outdated-all / unq all: 633 1001 / 647 1020
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-09] / []
+
 2023-09-23T08:10:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6282561625 # 1186
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
